[package]
name = "vex-queue"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Async background worker queue for VEX Protocol"
readme = "README.md"
keywords = ["ai", "agents", "queue", "worker", "async"]
categories = ["asynchronous", "concurrency"]

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
