[package]
name = "vex-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tokio-based agent orchestration for VEX"
readme = "README.md"
keywords = ["ai", "agents", "tokio", "orchestration", "runtime"]
categories = ["asynchronous", "concurrency"]

[dependencies]
vex-core = { path = "../vex-core", version = "0.1.0" }
vex-adversarial = { path = "../vex-adversarial", version = "0.1.0" }
vex-llm = { path = "../vex-llm", version = "0.1.0" }
vex-persist = { path = "../vex-persist", version = "0.1.0" }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
[dev-dependencies]
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
