[package]
name = "vex-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tokio-based agent orchestration for VEX"
readme = "README.md"
keywords = ["ai", "agents", "tokio", "orchestration", "runtime"]
categories = ["asynchronous", "concurrency"]

[dependencies]
vex-core = { workspace = true }
vex-adversarial = { workspace = true }
vex-llm = { workspace = true }
vex-persist = { workspace = true }
vex-anchor = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
[dev-dependencies]
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
