[package]
name = "vex-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone server binary for VEX Protocol"

[dependencies]
vex-api = { workspace = true }
vex-llm = { workspace = true }
vex-persist = { workspace = true }
vex-anchor = { workspace = true }
vex-hardware = { workspace = true }
vex-core = { workspace = true }
vex-queue = { workspace = true }
vex-runtime = { workspace = true }
vex-router = { workspace = true }
vex-chora = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit", "compression-gzip"] }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { workspace = true }
chrono.workspace = true
hex.workspace = true

[[bin]]
name = "vex-server"
path = "src/main.rs"
