[package]
name = "vex-sidecar"
version = "0.2.0"
edition = "2021"
authors = ["ProvnAI Team"]
description = "Transparent VEX Proxy for legacy API encapsulation"

[dependencies]
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
reqwest = { workspace = true, features = ["json"] }
vex-core = { path = "../vex-core" }
zerocopy = { workspace = true }
serde_jcs = { workspace = true }
chrono.workspace = true

[dev-dependencies]
tokio-test = "0.4"
