[package]
name = "vex-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Transparent VEX Proxy for legacy API encapsulation"

[dependencies]
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
reqwest = { workspace = true, features = ["json"] }
vex-core = { workspace = true }
zerocopy = { workspace = true }
serde_jcs = { workspace = true }
chrono.workspace = true
vex-hardware = { workspace = true }
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tokio-test = "0.4"
