[package]
name = "vex-temporal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Time-aware memory compression for VEX"
readme = "README.md"
keywords = ["ai", "agents", "memory", "temporal", "compression"]
categories = ["algorithms", "asynchronous"]

[dependencies]
vex-core = { workspace = true }
vex-llm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "memory_benchmark"
harness = false
