[package]
name = "vex-demo"
version = "0.1.0"
edition = "2021"
description = "VEX Protocol Demo - Multi-Agent Examples"

[[bin]]
name = "research-agent"
path = "src/main.rs"

[[bin]]
name = "fraud-detector"
path = "src/fraud_detector.rs"

[[bin]]
name = "interactive"
path = "src/interactive.rs"

[[bin]]
name = "gen-audit-cli"
path = "src/gen_audit_cli.rs"

[dependencies]
vex-core = { workspace = true }
vex-adversarial = { workspace = true }
vex-llm = { workspace = true }
vex-temporal = { workspace = true }
vex-runtime = { workspace = true }
vex-persist = { workspace = true }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde_json = "1"
chrono = "0.4"
uuid = "1"
